2012-02-07  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r106935.
        http://trac.webkit.org/changeset/106935
        https://bugs.webkit.org/show_bug.cgi?id=77994

        "Crashes runMultiThread webkit_unit_test" (Requested by tonyg-
        cr on #webkit).

        * public/WebWidget.h:
        (WebWidget):
        * src/WebViewImpl.cpp:
        * src/WebViewImpl.h:
        (WebViewImpl):

2012-02-07  Jonathan Backer  <backer@chromium.org>

        [chromium] Add setNeedsRedraw to WebWidget
        https://bugs.webkit.org/show_bug.cgi?id=77555

        Reviewed by James Robinson.

        * public/WebWidget.h:
        (WebWidget):
        (WebKit::WebWidget::setNeedsRedraw):
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::setNeedsRedraw):
        (WebKit):
        * src/WebViewImpl.h:
        (WebViewImpl):

2012-02-07  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed.  Rolled DEPS.

        * DEPS:

2012-02-06  James Robinson  <jamesr@chromium.org>

        [chromium] canvas demo is slow due to unnecessary resource cleanups
        https://bugs.webkit.org/show_bug.cgi?id=77135

        Reviewed by Kenneth Russell.

        * tests/Canvas2DLayerChromiumTest.cpp:
        (WebCore::Canvas2DLayerChromiumTest::fullLifecycleTest):
        * tests/TextureManagerTest.cpp:
        * tests/TiledLayerChromiumTest.cpp:

2012-02-06  Julien Chaffraix  <jchaffraix@webkit.org>

        Unreviewed gardening.

        * DEPS: Rolling the DEPS to get the apple_webkit update
        and fix the Chromium build.

2012-02-06  Emil A Eklund  <eae@chromium.org>

        Convert PopupMenuClient::clientPadding over to new layout abstraction
        https://bugs.webkit.org/show_bug.cgi?id=77798

        Reviewed by Eric Seidel.

        Change PopupMenuClient and all classes inheriting from it to use the new
        layout types for padding.

        * src/AutofillPopupMenuClient.cpp: